Fix - Boot box popup shifts page slightly to the left

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -448,3 +448,6 @@ ul.pagination li::before {
 .domain-row a.more-link {
     border: none;
 }
+.modal-open {
+    padding-right: 0 !important;
+}
